fix(background): set overflow hidden on bg element

--- a/src/styles/hero-landing.sass
+++ b/src/styles/hero-landing.sass
@@ -10,6 +10,7 @@
     left: 0
     width: 100%
     height: 100%
+    overflow: hidden
 
     .svg-wrapper
       position: absolute
